<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <ImageView
    android:id="@+id/ivRock"
    android:layout_width="120dp"
    android:layout_height="100dp"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="16dp"
    android:background="#009688"
    android:contentDescription="@string/rock"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:srcCompat="@drawable/rock" />

  <ImageView
    android:id="@+id/ivPaper"
    android:layout_width="120dp"
    android:layout_height="100dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:background="#009688"
    android:contentDescription="@string/paper"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/ivScissors"
    app:layout_constraintStart_toEndOf="@+id/ivRock"
    app:srcCompat="@drawable/paper" />

  <ImageView
    android:id="@+id/ivScissors"
    android:layout_width="120dp"
    android:layout_height="100dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:background="#009688"
    android:contentDescription="@string/scissors"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:srcCompat="@drawable/scissors" />

  <ImageView
    android:id="@+id/ivPicked"
    android:layout_width="90dp"
    android:layout_height="70dp"
    android:layout_marginStart="48dp"
    android:layout_marginBottom="140dp"
    android:background="#009688"
    android:contentDescription="@string/picked"
    app:layout_constraintBottom_toTopOf="@+id/ivRock"
    app:layout_constraintStart_toStartOf="parent"
    app:srcCompat="@drawable/paper" />

  <ImageView
    android:id="@+id/ivComputerPicked"
    android:layout_width="90dp"
    android:layout_height="70dp"
    android:layout_marginEnd="48dp"
    android:layout_marginBottom="140dp"
    android:background="#009688"
    android:contentDescription="@string/computerpicked"
    app:layout_constraintBottom_toTopOf="@+id/ivScissors"
    app:layout_constraintEnd_toEndOf="parent"
    app:srcCompat="@drawable/scissors" />

  <TextView
    android:id="@+id/tvWelcome"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/welcome"
    android:textSize="40sp"
    android:textStyle="bold|italic"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tvInstructions"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/select_rock_paper_or_scissors_to_play"
    android:textSize="12sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

  <TextView
    android:id="@+id/tvVS"
    android:layout_width="90dp"
    android:layout_height="70dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="140dp"
    android:fontFamily="sans-serif"
    android:text="@string/v_s"
    android:textAlignment="center"
    android:textAllCaps="false"
    android:textSize="48sp"
    android:textStyle="bold|italic"
    android:typeface="normal"
    app:layout_constraintBottom_toTopOf="@+id/ivPaper"
    app:layout_constraintEnd_toStartOf="@+id/ivComputerPicked"
    app:layout_constraintStart_toEndOf="@+id/ivPicked" />

  <View
    android:id="@+id/viewBar"
    android:layout_width="0dp"
    android:layout_height="10dp"
    android:layout_marginTop="8dp"
    android:background="#009688"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

  <TextView
    android:id="@+id/tvAllTimeStats"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/your_all_time_statistics"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/viewBar" />

  <TextView
    android:id="@+id/tvStats"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/hier_komen_stats"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvAllTimeStats" />

  <TextView
    android:id="@+id/tvWinLose"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="48dp"
    android:text="WINNERWINNERCHICKENDINNER"
    app:layout_constraintBottom_toTopOf="@+id/tvVS"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

