<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <ImageView
    android:id="@+id/ivPickedHistory"
    android:layout_width="90dp"
    android:layout_height="70dp"
    android:layout_marginStart="48dp"
    android:layout_marginTop="16dp"
    android:background="#009688"
    android:contentDescription="@string/picked"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvDateTime"
    app:srcCompat="@drawable/paper" />

  <ImageView
    android:id="@+id/ivComputerPickedHistory"
    android:layout_width="90dp"
    android:layout_height="70dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="48dp"
    android:background="#009688"
    android:contentDescription="@string/computerpicked"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvDateTime"
    app:srcCompat="@drawable/scissors" />

  <TextView
    android:id="@+id/tvVSHistory"
    android:layout_width="90dp"
    android:layout_height="70dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:fontFamily="sans-serif"
    android:text="@string/v_s"
    android:textAlignment="center"
    android:textAllCaps="false"
    android:textSize="48sp"
    android:textStyle="bold|italic"
    android:typeface="normal"
    app:layout_constraintEnd_toStartOf="@+id/ivComputerPickedHistory"
    app:layout_constraintStart_toEndOf="@+id/ivPickedHistory"
    app:layout_constraintTop_toBottomOf="@+id/tvDateTime" />

  <TextView
    android:id="@+id/tvWinLoseOrDraw"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tvDateTime"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvWinLoseOrDraw" />

  <TextView
    android:id="@+id/tvYouHistory"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="56dp"
    android:text="@string/you"
    app:layout_constraintEnd_toStartOf="@+id/tvVSHistory"
    app:layout_constraintTop_toBottomOf="@+id/ivPickedHistory" />

  <TextView
    android:id="@+id/tvBotHistory"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginTop="16dp"
    android:text="@string/computer"
    app:layout_constraintStart_toEndOf="@+id/tvVSHistory"
    app:layout_constraintTop_toBottomOf="@+id/ivComputerPickedHistory" />

</androidx.constraintlayout.widget.ConstraintLayout>
